# Projet-LLL

./: .gitignore  Makefile  README.md  pyproject.toml  pyvenv.cfg  setup.py
.github/workflows/: python-publish.yml  test.yml
c/: num.c
cython/: num.pyx
doc-build/doctrees/: environment.pickle  index.doctree
doc-build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc-build/html/_sources/: index.rst.txt
doc-build/html/_static/: documentation_options.js
doc-build/latex/: maravilla.fdb_latexmk  maravilla.fls  maravilla.tex
doc-build/singlehtml/: .buildinfo  index.html  objects.inv
doc-build/singlehtml/_static/: documentation_options.js
python/: limit.py
scripts/: polynomes.py  setup.py
source/: conf.py
src/: limit.py  mod.py  num.py  polynomial.py
tests/: run.sh  test_limits.py  test_mod.py  test_num.py  tests.py
